--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@
               <input type="text" name="id" id="id" />
             </div>
             <div class="add-btn">
-              <input type="submit" value="submit" class="btn" />
+              <input type="submit" value="submit" class="btn form-submit-btn" />
             </div>
           </form>
         </div>
