fixed update issues

--- a/public/index.html
+++ b/public/index.html
@@ -70,10 +70,10 @@
           </div>
           <ul class="lists">
             <li class="list" data-id="all">ALL</li>
-            <li class="list" data-id="mumbai">Rooms</li>
-            <li class="list" data-id="delhi">Farms</li>
-            <li class="list" data-id="jalgaon">Flats</li>
-            <li class="list" data-id="pune">Land area</li>
+            <li class="list" data-id="House">Home</li>
+            <li class="list" data-id="Land">Land</li>
+            <li class="list" data-id="Flat">Flats</li>
+            <li class="list" data-id="Shop">Shop</li>
           </ul>
           <br />
           <label class="range-lbl" for="range">Select Range :</label>
@@ -150,7 +150,6 @@
                 <option value="House">House</option>
                 <option value="Flat">Flat</option>
                 <option value="Shop">Shop</option>
-                <option value="Other">Other</option>
               </select>
             </div>
             <div class="file inp">
